--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "random": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-star-wars-crawl": "^2.0.0",
     "recoil": "^0.7.6",
     "three": "^0.148.0",
     "typewriter-effect": "^2.19.0"
